# BRIT

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  FLEXIBI_DST.html  LICENSE  Makefile  README.md  REVIEW_FIXES_SUMMARY.md  Untitled Diagram.drawio  altmodels.py  backup_db.bat  compose.yml  deploy_db.bat  docker-compose.yml  entrypoint.sh  env.bat  heroku.yml  manage.py  mkdocs.yml  pull_db.bat  push_db.bat  pyproject.toml  refactoring.md  release-commands.sh  requirements.txt  sample.json  script.py  test_output__file_export_refactor.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: assets.yml  ci.yml  deploy.yml  public-boundary.yml
.windsurf/workflows/: multistep-task-with-notes.md
api/: serializer.py  views.py
bibliography/: README.md  admin.py  apps.py  bibtex.py  filters.py  forms.py  inlines.py  models.py  router.py  serializers.py  tables.py  tasks.py  urls.py  utils.py  views.py  viewsets.py
bibliography/migrations/: 0001_initial.py  0002_author_approved_at_author_approved_by_and_more.py  0002_auto_20211007_1350.py  0002_initial_data.py  0003_alter_author_publication_status_and_more.py  0003_author.py  0003_delete_literaturesource.py  0004_alter_author_publication_status_and_more.py  0004_auto_20211031_2026.py  0004_auto_20220505_1615.py  0005_alter_source_abbreviation_blank.py  0005_alter_source_type.py  0006_alter_source_url.py  0006_auto_20211115_1228.py  0006_auto_20220822_1251.py  0007_alter_source_options.py  0007_auto_20220830_0824.py  (+27 more)
bioresource_explorer/: apps.py  filters.py  forms.py  models.py  serializers.py  tables.py  urls.py  views.py
brit/: README.md  apps.py  asgi.py  celery.py  context_processors.py  exceptions.py  export_views.py  forms.py  layering.py  middleware.py  models.py  renderers.py  signals.py  sitemap_items.py  sitemaps.py  storages.py  tables.py  tasks.py  test_export_views.py  urls.py  views.py  wsgi.py
case_studies/: README.md
case_study_nantes/: apps.py  models.py
distributions/: README.md  admin.py  apps.py  models.py  plots.py  test_plots.py  urls.py  utils.py  views.py
docs/: README.md  api.md  applications.md  architecture.md  collection_model.md  external_ontology_endpoints.md  howtos.md  index.md  operations.md  processes_app_dependencies.md  processes_app_plan.md  references.md  waste_atlas_data_availability.md
flexibi_dst/: admin.py  apps.py  asgi.py  celery.py  models.py  settings.py  tables.py  urls.py  views.py  wsgi.py
gis_source_manager/: apps.py  models.py
interfaces/: README.md
inventories/: README.md  admin.py  algorithms.py  apps.py  evaluations.py  exceptions.py  fields.py  filters.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
layer_manager/: admin.py  apps.py  exceptions.py  models.py  serializers.py  test_models.py  tests.py
maps/: README.md  admin.py  apps.py  contracts.py  db_functions.py  dynamic_model.py  filters.py  forms.py  mapmixin.md  middleware.py  mixins.py  models.py  registry.py  router.py  runtime_adapters.py  serializers.py  signals.py  tasks.py  test_urls_generic.py  throttling.py  urls.py  utils.py  validation.py  views.py  viewsets.py
material_manager/: admin.py  apps.py  forms.py  models.py  tables.py  tests.py  urls.py  views.py
materials/: README.md  admin.py  apps.py  composition_normalization.py  exports.py  filters.py  forms.py  models.py  renderers.py  router.py  serializers.py  tables.py  tasks.py  tests.py  urls.py  utils.py  views.py  viewsets.py
moderation/: tests.py  urls.py  views.py
notes/: 2024-05-30_dropdown_fix.md  2024-05-30_list_view_ux_improvements.md  2025-05-06-collection-integer-fields-upgrade.md  2025-05-30_brit-css-ui-overhaul.md  2025-05-30_navigation_options_dropdowns.md  2025-06-02_css-alignment-task.md  2025-06-03_bootstrap5-migration-task.md  2025-06-04_select2-bootstrap5-fix.md  2025-06-06_footer-sidebar-redesign.md  2025-06-06_jquery-select2-to-tomselect-migration.md  2025-06-06_jquery-ui-removal.md  2025-06-06_tomselect-regressions-resolved.md  2025-06-06_tomselect-regressions-triage.md  2025-06-15_bibliography-test-failures.md  2025-06-15_django-tomselect-language-code-error.md  2025-06-18_scope-redirect-test-failures.md  README.md  adr_file_export_decoupling.md  comprehensive_recommendations.md  design_ux_issues.md  framework_comparison.md  guidelines.md  processes_onto_cape_mapping.md  style_guide.md
population/: admin.py  apps.py  models.py  services.py
processes/: AUTOCOMPLETE_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  MODERATION_PERMISSIONS.md  PRODUCTION_ROADMAP.md  README.md  SUMMARY.md  TEMPLATE_REFACTOR.md  TESTING_SUMMARY.md  admin.py  apps.py  filters.py  forms.py  models.py  querysets.py  router.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
scenario_builder/: admin.py  algorithms.py  apps.py  exceptions.py  fields.py  filters.py  forms.py  inventory_algorithms.py  models.py  scenarios.py  serializers.py  tasks.py  test_models.py  test_models_materials.py  test_scenarios.py  tests.py  urls.py  views.py
scenario_evaluation/: apps.py  evalutations.py  models.py  test_models.py
scenario_evaluator/: apps.py  evaluations.py  models.py  test_evalutations.py  tests.py  urls.py  views.py
scripts/: build_assets.mjs  check_public_boundary.sh
sources/: README.md  apps.py  contracts.py  registry.py  urls.py  views.py
templates/: base.html  bootstrap_form.html  catchment_definition.html  catchment_definition.html.bak  catchment_view.html  feedstock_definition.html  home.html  login.html  map.html  modal_confirm_delete.html  scenario.html  script_test.html  tree_list.html  tree_map.html  tree_map_json.html  tree_map_model_form.html
test_output/: bibliography_source_crud.txt
trees/: admin.py  models.py  serializers.py  urls.py  views.py
users/: forms.py  models.py  test_users.py  tests.py  urls.py  utils.py  views.py
utils/: README.md  admin.py  crispy_fields.py  fields.py  filters.py  forms.py  middleware.py  modal.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py  viewsets.py  widgets.py
(+1970 files in other folders)
